Detekcia komunit – code edits and img savings

--- a/detekcia_komunit.ipynb
+++ b/detekcia_komunit.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "b96dac7f",
    "metadata": {},
    "outputs": [],
@@ -11,25 +11,23 @@
     "import networkx as nx\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.cm as cm\n",
-    "import community.community_louvain as community_louvain"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "24a65388",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ==============================\n",
-    "# Vytvorenie priečinka pre obrázky\n",
-    "# ==============================\n",
-    "os.makedirs(\"img\", exist_ok=True)"
+    "import community.community_louvain as community_louvain\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "24a65388",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.makedirs(\"img\", exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "fad5bbca",
    "metadata": {},
    "outputs": [
@@ -44,7 +42,7 @@
    ],
    "source": [
     "# ==============================\n",
-    "# 1. Load graph\n",
+    "# 1. Data\n",
     "# ==============================\n",
     "G = nx.read_edgelist(\"facebook_combined.txt\", nodetype=int)\n",
     "print(\"Nodes:\", G.number_of_nodes())\n",
@@ -56,26 +54,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "402acff7",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ==============================\n",
-    "# 2. Raw graph visualization\n",
+    "# 2. Vizualizácia pôvodných dát\n",
     "# ==============================\n",
     "plt.figure(figsize=(12, 12))\n",
     "nx.draw_networkx_nodes(G, pos, node_size=10)\n",
     "nx.draw_networkx_edges(G, pos, alpha=0.05)\n",
-    "plt.title(\"Facebook social network – raw data\")\n",
+    "plt.title(\"Facebook social network – data\")\n",
     "plt.axis(\"off\")\n",
-    "plt.savefig(\"img/raw_data.png\", dpi=300)\n",
+    "plt.savefig(\"img/data.png\", dpi=300)\n",
     "plt.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "f5d48c03",
    "metadata": {},
    "outputs": [],
@@ -86,7 +84,7 @@
     "# Louvain\n",
     "partition_louvain = community_louvain.best_partition(G)\n",
     "\n",
-    "# Label Propagation (LPA)\n",
+    "# LPA\n",
     "communities_lpa = list(nx.algorithms.community.label_propagation_communities(G))\n",
     "partition_lpa = {}\n",
     "for idx, comm in enumerate(communities_lpa):\n",
@@ -96,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "44b16544",
    "metadata": {},
    "outputs": [
@@ -104,7 +102,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_26522/1960375212.py:7: MatplotlibDeprecationWarning: The get_cmap function was deprecated in Matplotlib 3.7 and will be removed in 3.11. Use ``matplotlib.colormaps[name]`` or ``matplotlib.colormaps.get_cmap()`` or ``pyplot.get_cmap()`` instead.\n",
+      "/tmp/ipykernel_36689/464718339.py:7: MatplotlibDeprecationWarning: The get_cmap function was deprecated in Matplotlib 3.7 and will be removed in 3.11. Use ``matplotlib.colormaps[name]`` or ``matplotlib.colormaps.get_cmap()`` or ``pyplot.get_cmap()`` instead.\n",
       "  cmap = cm.get_cmap('tab20', len(communities))\n"
      ]
     }
@@ -134,15 +132,15 @@
     "    plt.close()\n",
     "\n",
     "# ==============================\n",
-    "# 5. Uloženie vizualizácií do img/\n",
+    "# 5. Uloženie vizualizácií\n",
     "# ==============================\n",
     "draw_and_save(G, partition_louvain, \"Detekcia komunít – Louvain\", \"img/louvain.png\", pos)\n",
-    "draw_and_save(G, partition_lpa, \"Detekcia komunít – Label Propagation\", \"img/lpa.png\", pos)\n"
+    "draw_and_save(G, partition_lpa, \"Detekcia komunít – LPA\", \"img/lpa.png\", pos)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "b9577365",
    "metadata": {},
    "outputs": [
@@ -150,7 +148,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Louvain – modularita: 0.8349652587713134 | počet komunít: 16\n",
+      "Louvain – modularita: 0.8347388378412373 | počet komunít: 16\n",
       "LPA     – modularita: 0.7368407345348218 | počet komunít: 44\n"
      ]
     }
@@ -164,6 +162,46 @@
     "\n",
     "print(\"Louvain – modularita:\", mod_louvain, \"| počet komunít:\", len(set(partition_louvain.values())))\n",
     "print(\"LPA     – modularita:\", mod_lpa, \"| počet komunít:\", len(set(partition_lpa.values())))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "478bc111",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ==============================\n",
+    "# Uloženie tabuľky s výsledkami\n",
+    "# ==============================\n",
+    "mod_louvain_rounded = round(mod_louvain, 4)\n",
+    "mod_lpa_rounded = round(mod_lpa, 4)\n",
+    "\n",
+    "results = {\n",
+    "    \"Model\": [\"Louvain\", \"LPA\"],\n",
+    "    \"Počet komunít\": [len(set(partition_louvain.values())), len(set(partition_lpa.values()))],\n",
+    "    \"Modularita\": [mod_louvain_rounded, mod_lpa_rounded]\n",
+    "}\n",
+    "\n",
+    "df_results = pd.DataFrame(results)\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(6, 2))  # veľkosť obrázku\n",
+    "ax.axis('tight')\n",
+    "ax.axis('off')\n",
+    "\n",
+    "# Vytvorenie tabuľky\n",
+    "table = ax.table(cellText=df_results.values,\n",
+    "                 colLabels=df_results.columns,\n",
+    "                 cellLoc='center',\n",
+    "                 loc='center')\n",
+    "\n",
+    "table.auto_set_font_size(False)\n",
+    "table.set_fontsize(12)\n",
+    "table.scale(1, 2)  # mierka riadkov a stĺpcov\n",
+    "\n",
+    "# Uloženie do PNG\n",
+    "plt.savefig(\"img/vyhodnotenie.png\", dpi=300, bbox_inches='tight')\n",
+    "plt.close()\n"
    ]
   }
  ],
