--- a/detekcia_komunit.ipynb
+++ b/detekcia_komunit.ipynb
@@ -2,32 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "b96dac7f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
     "import networkx as nx\n",
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib.cm as cm\n",
     "import community.community_louvain as community_louvain\n",
-    "import pandas as pd"
+    "import funkcie as fn\n",
+    "fn.setup_directories()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "24a65388",
+   "cell_type": "markdown",
+   "id": "2275f425",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "os.makedirs(\"img\", exist_ok=True)"
+    "#### NAČÍTANIE DÁT"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "fad5bbca",
    "metadata": {},
    "outputs": [
@@ -35,173 +33,172 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nodes: 4039\n",
-      "Edges: 88234\n"
+      "Načítavam dáta z: facebook_combined.txt\n",
+      "-> Uzlov: 4039\n",
+      "-> Hrán: 88234\n",
+      "Počítam layout (môže to chvíľu trvať)...\n"
      ]
     }
    ],
    "source": [
-    "# ==============================\n",
-    "# 1. Data\n",
-    "# ==============================\n",
-    "G = nx.read_edgelist(\"facebook_combined.txt\", nodetype=int)\n",
-    "print(\"Nodes:\", G.number_of_nodes())\n",
-    "print(\"Edges:\", G.number_of_edges())\n",
-    "\n",
-    "# Layout pre vizualizáciu\n",
-    "pos = nx.spring_layout(G, seed=42)"
+    "G = fn.load_data(\"facebook_combined.txt\")\n",
+    "pos = nx.spring_layout(G, seed=42)\n",
+    "fn.draw_graph_raw(G, pos)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5769d5bf",
+   "metadata": {},
+   "source": [
+    "#### MODEL LOUVAIN"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "402acff7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ==============================\n",
-    "# 2. Vizualizácia pôvodných dát\n",
-    "# ==============================\n",
-    "plt.figure(figsize=(12, 12))\n",
-    "nx.draw_networkx_nodes(G, pos, node_size=10)\n",
-    "nx.draw_networkx_edges(G, pos, alpha=0.05)\n",
-    "plt.title(\"Facebook social network – data\")\n",
-    "plt.axis(\"off\")\n",
-    "plt.savefig(\"img/data.png\", dpi=300)\n",
-    "plt.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "f5d48c03",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ==============================\n",
-    "# 3. Modely detekcie komunít\n",
-    "# ==============================\n",
-    "# Louvain\n",
-    "partition_louvain = community_louvain.best_partition(G)\n",
-    "\n",
-    "# LPA\n",
-    "communities_lpa = list(nx.algorithms.community.label_propagation_communities(G))\n",
-    "partition_lpa = {}\n",
-    "for idx, comm in enumerate(communities_lpa):\n",
-    "    for node in comm:\n",
-    "        partition_lpa[node] = idx"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "44b16544",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_36689/464718339.py:7: MatplotlibDeprecationWarning: The get_cmap function was deprecated in Matplotlib 3.7 and will be removed in 3.11. Use ``matplotlib.colormaps[name]`` or ``matplotlib.colormaps.get_cmap()`` or ``pyplot.get_cmap()`` instead.\n",
-      "  cmap = cm.get_cmap('tab20', len(communities))\n"
-     ]
-    }
-   ],
-   "source": [
-    "# ==============================\n",
-    "# 4. Funkcia na vizualizáciu a uloženie\n",
-    "# ==============================\n",
-    "def draw_and_save(graph, partition, title, filename, pos):\n",
-    "    plt.figure(figsize=(12, 12))\n",
-    "    communities = list(set(partition.values()))\n",
-    "    cmap = cm.get_cmap('tab20', len(communities))\n",
-    "\n",
-    "    for i, comm in enumerate(communities):\n",
-    "        nodes = [n for n in graph.nodes() if partition[n] == comm]\n",
-    "        nx.draw_networkx_nodes(\n",
-    "            graph, pos,\n",
-    "            nodelist=nodes,\n",
-    "            node_size=20,\n",
-    "            node_color=[cmap(i)]\n",
-    "        )\n",
-    "\n",
-    "    nx.draw_networkx_edges(graph, pos, alpha=0.03)\n",
-    "    plt.title(title)\n",
-    "    plt.axis(\"off\")\n",
-    "    plt.savefig(filename, dpi=300)\n",
-    "    plt.close()\n",
-    "\n",
-    "# ==============================\n",
-    "# 5. Uloženie vizualizácií\n",
-    "# ==============================\n",
-    "draw_and_save(G, partition_louvain, \"Detekcia komunít – Louvain\", \"img/louvain.png\", pos)\n",
-    "draw_and_save(G, partition_lpa, \"Detekcia komunít – LPA\", \"img/lpa.png\", pos)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "b9577365",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Louvain – modularita: 0.8347388378412373 | počet komunít: 16\n",
-      "LPA     – modularita: 0.7368407345348218 | počet komunít: 44\n"
+      "Louvain -> Modularita: 0.8349, Komunít: 15\n"
      ]
     }
    ],
    "source": [
-    "# ==============================\n",
-    "# 6. Vyhodnotenie – modularita a počet komunít\n",
-    "# ==============================\n",
-    "mod_louvain = community_louvain.modularity(partition_louvain, G)\n",
-    "mod_lpa = community_louvain.modularity(partition_lpa, G)\n",
+    "# 1. Spustenie algoritmu\n",
+    "partition_louvain = community_louvain.best_partition(G, resolution=1.0)\n",
     "\n",
-    "print(\"Louvain – modularita:\", mod_louvain, \"| počet komunít:\", len(set(partition_louvain.values())))\n",
-    "print(\"LPA     – modularita:\", mod_lpa, \"| počet komunít:\", len(set(partition_lpa.values())))\n"
+    "# 2. Výpočet metrík\n",
+    "mod_louvain = fn.calculate_modularity(G, partition_louvain)\n",
+    "count_louvain = len(set(partition_louvain.values()))\n",
+    "\n",
+    "print(f\"Louvain -> Modularita: {mod_louvain:.4f}, Počet komunít: {count_louvain}\")\n",
+    "\n",
+    "# 3. Vizualizácia\n",
+    "fn.draw_communities(G, partition_louvain, pos, \"Louvain Algorithm\", \"img/louvain.png\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1061679e",
+   "metadata": {},
+   "source": [
+    "#### MODEL LPA"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "478bc111",
+   "execution_count": null,
+   "id": "f5d48c03",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LPA -> Modularita: 0.7368, Komunít: 44\n"
+     ]
+    }
+   ],
    "source": [
-    "# ==============================\n",
-    "# Uloženie tabuľky s výsledkami\n",
-    "# ==============================\n",
-    "mod_louvain_rounded = round(mod_louvain, 4)\n",
-    "mod_lpa_rounded = round(mod_lpa, 4)\n",
+    "# 1. Spustenie algoritmu\n",
+    "communities_lpa = list(nx.algorithms.community.label_propagation_communities(G))\n",
     "\n",
-    "results = {\n",
-    "    \"Model\": [\"Louvain\", \"LPA\"],\n",
-    "    \"Počet komunít\": [len(set(partition_louvain.values())), len(set(partition_lpa.values()))],\n",
-    "    \"Modularita\": [mod_louvain_rounded, mod_lpa_rounded]\n",
-    "}\n",
+    "# 2. Konverzia na partition formát\n",
+    "partition_lpa = fn.communities_to_partition(communities_lpa)\n",
     "\n",
-    "df_results = pd.DataFrame(results)\n",
+    "# 3. Výpočet metrík\n",
+    "mod_lpa = fn.calculate_modularity(G, partition_lpa)\n",
+    "count_lpa = len(communities_lpa)\n",
     "\n",
-    "fig, ax = plt.subplots(figsize=(6, 2))  # veľkosť obrázku\n",
-    "ax.axis('tight')\n",
-    "ax.axis('off')\n",
+    "print(f\"LPA -> Modularita: {mod_lpa:.4f}, Počet komunít: {count_lpa}\")\n",
     "\n",
-    "# Vytvorenie tabuľky\n",
-    "table = ax.table(cellText=df_results.values,\n",
-    "                 colLabels=df_results.columns,\n",
-    "                 cellLoc='center',\n",
-    "                 loc='center')\n",
+    "# 4. Vizualizácia\n",
+    "fn.draw_communities(G, partition_lpa, pos, \"Label Propagation (LPA)\", \"img/lpa.png\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c1c05428",
+   "metadata": {},
+   "source": [
+    "#### VYHODNOTENIE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "44b16544",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model</th>\n",
+       "      <th>Modularita</th>\n",
+       "      <th>Počet komunít</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Louvain</td>\n",
+       "      <td>0.8349</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>LPA</td>\n",
+       "      <td>0.7368</td>\n",
+       "      <td>44</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Model  Modularita  Počet komunít\n",
+       "0  Louvain      0.8349             15\n",
+       "1      LPA      0.7368             44"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Zozbieranie výsledkov do zoznamu\n",
+    "results = [\n",
+    "    {\"Model\": \"Louvain\", \"Modularita\": round(mod_louvain, 4), \"Počet komunít\": count_louvain},\n",
+    "    {\"Model\": \"LPA\",     \"Modularita\": round(mod_lpa, 4),     \"Počet komunít\": count_lpa}\n",
+    "]\n",
     "\n",
-    "table.auto_set_font_size(False)\n",
-    "table.set_fontsize(12)\n",
-    "table.scale(1, 2)  # mierka riadkov a stĺpcov\n",
-    "\n",
-    "# Uloženie do PNG\n",
-    "plt.savefig(\"img/vyhodnotenie.png\", dpi=300, bbox_inches='tight')\n",
-    "plt.close()\n"
+    "# Uloženie a zobrazenie tabuľky\n",
+    "df_results = fn.save_results_table(results)\n",
+    "df_results"
    ]
   }
  ],
