--- a/detekcia_komunit.ipynb
+++ b/detekcia_komunit.ipynb
@@ -48,81 +48,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5769d5bf",
-   "metadata": {},
-   "source": [
-    "#### MODEL LOUVAIN"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "402acff7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Louvain -> Modularita: 0.8349, Komunít: 15\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 1. Spustenie algoritmu\n",
-    "partition_louvain = community_louvain.best_partition(G, resolution=1.0)\n",
-    "\n",
-    "# 2. Výpočet metrík\n",
-    "mod_louvain = fn.calculate_modularity(G, partition_louvain)\n",
-    "count_louvain = len(set(partition_louvain.values()))\n",
-    "\n",
-    "print(f\"Louvain -> Modularita: {mod_louvain:.4f}, Počet komunít: {count_louvain}\")\n",
-    "\n",
-    "# 3. Vizualizácia\n",
-    "fn.draw_communities(G, partition_louvain, pos, \"Louvain Algorithm\", \"img/louvain.png\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1061679e",
-   "metadata": {},
-   "source": [
-    "#### MODEL LPA"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f5d48c03",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LPA -> Modularita: 0.7368, Komunít: 44\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 1. Spustenie algoritmu\n",
-    "communities_lpa = list(nx.algorithms.community.label_propagation_communities(G))\n",
-    "\n",
-    "# 2. Konverzia na partition formát\n",
-    "partition_lpa = fn.communities_to_partition(communities_lpa)\n",
-    "\n",
-    "# 3. Výpočet metrík\n",
-    "mod_lpa = fn.calculate_modularity(G, partition_lpa)\n",
-    "count_lpa = len(communities_lpa)\n",
-    "\n",
-    "print(f\"LPA -> Modularita: {mod_lpa:.4f}, Počet komunít: {count_lpa}\")\n",
-    "\n",
-    "# 4. Vizualizácia\n",
-    "fn.draw_communities(G, partition_lpa, pos, \"Label Propagation (LPA)\", \"img/lpa.png\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "c1c05428",
    "metadata": {},
    "source": [
@@ -199,6 +124,131 @@
     "# Uloženie a zobrazenie tabuľky\n",
     "df_results = fn.save_results_table(results)\n",
     "df_results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bca2ba21",
+   "metadata": {},
+   "source": [
+    "#### EXPERIMENT A: Vlpyv hyperparametra resolution na výsledky modelu Louvain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0d7cb6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ==========================================\n",
+    "# EXPERIMENT A: Ladenie parametra Resolution\n",
+    "# ==========================================\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import community.community_louvain as community_louvain\n",
+    "import funkcie as fn  # Importujeme tvoje pomocné funkcie\n",
+    "\n",
+    "# 1. Definícia rozsahu resolution\n",
+    "resolutions = np.arange(0, 2.1, 0.1)\n",
+    "\n",
+    "results_exp_a = []\n",
+    "best_modularity = -1\n",
+    "best_resolution = 1.0\n",
+    "best_partition = None\n",
+    "\n",
+    "# --- VÝPOČTY ---\n",
+    "for r in resolutions:\n",
+    "    r = round(r, 1)\n",
+    "    \n",
+    "    try:\n",
+    "        # Výpočet Louvain (tento voláme priamo, lebo ho v funkcie.py nemáme obalený pre rôzne resolution)\n",
+    "        partition = community_louvain.best_partition(G, resolution=r, random_state=42)\n",
+    "        \n",
+    "        # Výpočet metrík - POUŽITIE TVOJEJ FUNKCIE Z funkcie.py\n",
+    "        mod = fn.calculate_modularity(G, partition)\n",
+    "        n_comms = len(set(partition.values()))\n",
+    "        \n",
+    "        results_exp_a.append({\n",
+    "            \"Resolution\": r,\n",
+    "            \"Modularita\": mod,\n",
+    "            \"Počet komunít\": n_comms\n",
+    "        })\n",
+    "        \n",
+    "        if mod > best_modularity:\n",
+    "            best_modularity = mod\n",
+    "            best_resolution = r\n",
+    "            best_partition = partition\n",
+    "            \n",
+    "    except Exception as e:\n",
+    "        pass\n",
+    "\n",
+    "df_a = pd.DataFrame(results_exp_a)\n",
+    "\n",
+    "# -------------------------------------------------------\n",
+    "# 2. Uloženie GRAFU (bez zobrazenia)\n",
+    "# -------------------------------------------------------\n",
+    "fig, ax1 = plt.subplots(figsize=(12, 6))\n",
+    "\n",
+    "color = 'tab:blue'\n",
+    "ax1.set_xlabel('Resolution Parameter')\n",
+    "ax1.set_ylabel('Modularita', color=color, fontweight='bold')\n",
+    "ax1.plot(df_a['Resolution'], df_a['Modularita'], color=color, marker='o', markersize=4, linewidth=2)\n",
+    "ax1.tick_params(axis='y', labelcolor=color)\n",
+    "ax1.grid(True, alpha=0.3)\n",
+    "\n",
+    "ax2 = ax1.twinx()  \n",
+    "color = 'tab:red'\n",
+    "ax2.set_ylabel('Počet komunít', color=color, fontweight='bold')\n",
+    "ax2.plot(df_a['Resolution'], df_a['Počet komunít'], color=color, marker='s', markersize=4, linestyle='--', linewidth=2)\n",
+    "ax2.tick_params(axis='y', labelcolor=color)\n",
+    "\n",
+    "ax1.set_xticks(np.arange(0, 2.1, 0.1))\n",
+    "plt.title(f\"Experiment A: Vplyv Resolution ({resolutions[0]} - {resolutions[-1]})\")\n",
+    "plt.savefig(\"img/experiment_A_resolution_fine.png\", dpi=300, bbox_inches='tight')\n",
+    "plt.close()\n",
+    "\n",
+    "# -------------------------------------------------------\n",
+    "# 3. Uloženie TABUĽKY výsledkov do PNG\n",
+    "# -------------------------------------------------------\n",
+    "# Príprava dát pre tabuľku (formátovanie na text)\n",
+    "cell_text = []\n",
+    "for index, row in df_a.iterrows():\n",
+    "    cell_text.append([\n",
+    "        f\"{row['Resolution']:.1f}\",\n",
+    "        f\"{row['Modularita']:.4f}\",\n",
+    "        f\"{int(row['Počet komunít'])}\"  # Celé číslo\n",
+    "    ])\n",
+    "\n",
+    "# Nastavenie výšky obrázka\n",
+    "num_rows = len(df_a)\n",
+    "fig_height = (num_rows * 0.3) + 1.0 \n",
+    "\n",
+    "fig_tbl, ax_tbl = plt.subplots(figsize=(6, fig_height))\n",
+    "ax_tbl.axis('tight')\n",
+    "ax_tbl.axis('off')\n",
+    "\n",
+    "# Vytvorenie tabuľky\n",
+    "table = ax_tbl.table(cellText=cell_text,\n",
+    "                     colLabels=[\"Resolution\", \"Modularita\", \"Počet komunít\"],\n",
+    "                     cellLoc='center',\n",
+    "                     loc='center')\n",
+    "\n",
+    "table.auto_set_font_size(False)\n",
+    "table.set_fontsize(10)\n",
+    "table.scale(1, 1.5)\n",
+    "\n",
+    "plt.title(\"Detailné výsledky Experimentu A\", y=1.0, pad=20, fontsize=12, fontweight='bold')\n",
+    "plt.savefig(\"img/experiment_A_tabulka.png\", dpi=300, bbox_inches='tight')\n",
+    "plt.close()\n",
+    "\n",
+    "# -------------------------------------------------------\n",
+    "# 4. Uloženie VÍŤAZNEJ vizualizácie - POUŽITIE TVOJEJ FUNKCIE\n",
+    "# -------------------------------------------------------\n",
+    "fn.draw_communities(G, best_partition, pos, \n",
+    "                   f\"Najlepší model (Louvain res={best_resolution})\", \n",
+    "                   \"img/best_louvain_model.png\")"
    ]
   }
  ],
