--- a/detekcia_komunit.ipynb
+++ b/detekcia_komunit.ipynb
@@ -136,102 +136,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f0d7cb6e",
+   "execution_count": 26,
+   "id": "fc9b726a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ==========================================\n",
-    "# EXPERIMENT A: Ladenie parametra Resolution\n",
+    "# EXPERIMENT B: Hĺbková analýza víťazného modelu (Louvain)\n",
     "# ==========================================\n",
-    "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import collections\n",
     "import community.community_louvain as community_louvain\n",
-    "import funkcie as fn  # Importujeme tvoje pomocné funkcie\n",
+    "import funkcie as fn \n",
     "\n",
-    "# 1. Definícia rozsahu resolution\n",
-    "resolutions = np.arange(0, 2.1, 0.1)\n",
+    "# 1. Načítanie najlepšieho modelu (z Experimentu A)\n",
+    "# Použijeme resolution, ktoré vyhralo v predchádzajúcom kroku\n",
+    "try:\n",
+    "    final_res = best_resolution\n",
+    "except NameError:\n",
+    "    final_res = 1.0\n",
     "\n",
-    "results_exp_a = []\n",
-    "best_modularity = -1\n",
-    "best_resolution = 1.0\n",
-    "best_partition = None\n",
+    "# Výpočet finálneho rozdelenia pre Louvain\n",
+    "final_partition = community_louvain.best_partition(G, resolution=final_res, random_state=42)\n",
     "\n",
-    "# --- VÝPOČTY ---\n",
-    "for r in resolutions:\n",
-    "    r = round(r, 1)\n",
-    "    \n",
-    "    try:\n",
-    "        # Výpočet Louvain (tento voláme priamo, lebo ho v funkcie.py nemáme obalený pre rôzne resolution)\n",
-    "        partition = community_louvain.best_partition(G, resolution=r, random_state=42)\n",
-    "        \n",
-    "        # Výpočet metrík - POUŽITIE TVOJEJ FUNKCIE Z funkcie.py\n",
-    "        mod = fn.calculate_modularity(G, partition)\n",
-    "        n_comms = len(set(partition.values()))\n",
-    "        \n",
-    "        results_exp_a.append({\n",
-    "            \"Resolution\": r,\n",
-    "            \"Modularita\": mod,\n",
-    "            \"Počet komunít\": n_comms\n",
-    "        })\n",
-    "        \n",
-    "        if mod > best_modularity:\n",
-    "            best_modularity = mod\n",
-    "            best_resolution = r\n",
-    "            best_partition = partition\n",
-    "            \n",
-    "    except Exception as e:\n",
-    "        pass\n",
-    "\n",
-    "df_a = pd.DataFrame(results_exp_a)\n",
+    "# Získanie veľkostí a zoradenie od najväčšej po najmenšiu\n",
+    "community_counts = collections.Counter(final_partition.values())\n",
+    "sorted_sizes = sorted(community_counts.values(), reverse=True)\n",
     "\n",
     "# -------------------------------------------------------\n",
-    "# 2. Uloženie GRAFU (bez zobrazenia)\n",
+    "# 2. Uloženie GRAFU (Zoradené veľkosti - \"Rank-Size Plot\")\n",
     "# -------------------------------------------------------\n",
-    "fig, ax1 = plt.subplots(figsize=(12, 6))\n",
+    "plt.figure(figsize=(10, 6))\n",
     "\n",
-    "color = 'tab:blue'\n",
-    "ax1.set_xlabel('Resolution Parameter')\n",
-    "ax1.set_ylabel('Modularita', color=color, fontweight='bold')\n",
-    "ax1.plot(df_a['Resolution'], df_a['Modularita'], color=color, marker='o', markersize=4, linewidth=2)\n",
-    "ax1.tick_params(axis='y', labelcolor=color)\n",
-    "ax1.grid(True, alpha=0.3)\n",
+    "# Vytvoríme x-ovú os ako poradie (1, 2, 3...)\n",
+    "ranks = range(1, len(sorted_sizes) + 1)\n",
     "\n",
-    "ax2 = ax1.twinx()  \n",
-    "color = 'tab:red'\n",
-    "ax2.set_ylabel('Počet komunít', color=color, fontweight='bold')\n",
-    "ax2.plot(df_a['Resolution'], df_a['Počet komunít'], color=color, marker='s', markersize=4, linestyle='--', linewidth=2)\n",
-    "ax2.tick_params(axis='y', labelcolor=color)\n",
+    "# Vykreslenie stĺpcového grafu\n",
+    "bars = plt.bar(ranks, sorted_sizes, color='tab:green', edgecolor='black', alpha=0.75)\n",
     "\n",
-    "ax1.set_xticks(np.arange(0, 2.1, 0.1))\n",
-    "plt.title(f\"Experiment A: Vplyv Resolution ({resolutions[0]} - {resolutions[-1]})\")\n",
-    "plt.savefig(\"img/experiment_A_resolution_fine.png\", dpi=300, bbox_inches='tight')\n",
+    "plt.title(f\"Veľkosť komunít zoradená podľa poradia (Louvain, res={final_res})\")\n",
+    "plt.xlabel(\"Poradie komunity (od najväčšej po najmenšiu)\")\n",
+    "plt.ylabel(\"Počet členov (uzlov)\")\n",
+    "\n",
+    "# Nastavenie X-ovej osi\n",
+    "if len(ranks) <= 20:\n",
+    "    plt.xticks(ranks)\n",
+    "else:\n",
+    "    plt.locator_params(axis='x', integer=True)\n",
+    "\n",
+    "plt.grid(axis='y', linestyle='--', alpha=0.5)\n",
+    "\n",
+    "# Pridanie hodnoty nad prvý (najväčší) stĺpec pre efekt\n",
+    "plt.text(ranks[0], sorted_sizes[0], f\" {sorted_sizes[0]}\", ha='center', va='bottom', fontweight='bold')\n",
+    "\n",
+    "# Uloženie s názvom Experiment B\n",
+    "plt.savefig(\"img/experiment_B_sizes_sorted.png\", dpi=300, bbox_inches='tight')\n",
     "plt.close()\n",
     "\n",
     "# -------------------------------------------------------\n",
-    "# 3. Uloženie TABUĽKY výsledkov do PNG\n",
+    "# 3. Uloženie TABUĽKY \"Top 5 Komunít\"\n",
     "# -------------------------------------------------------\n",
-    "# Príprava dát pre tabuľku (formátovanie na text)\n",
-    "cell_text = []\n",
-    "for index, row in df_a.iterrows():\n",
-    "    cell_text.append([\n",
-    "        f\"{row['Resolution']:.1f}\",\n",
-    "        f\"{row['Modularita']:.4f}\",\n",
-    "        f\"{int(row['Počet komunít'])}\"  # Celé číslo\n",
+    "# Pripravíme dáta pre Top 5\n",
+    "sorted_comms_with_ids = sorted(community_counts.items(), key=lambda x: x[1], reverse=True)\n",
+    "\n",
+    "top_5_data = []\n",
+    "total_nodes = G.number_of_nodes()\n",
+    "\n",
+    "for i, (comm_id, size) in enumerate(sorted_comms_with_ids[:5]):\n",
+    "    share = (size / total_nodes) * 100\n",
+    "    top_5_data.append([\n",
+    "        str(i + 1),               # Poradie\n",
+    "        str(comm_id),             # ID Komunity\n",
+    "        str(size),                # Počet členov\n",
+    "        f\"{share:.1f} %\"          # Podiel na sieti\n",
     "    ])\n",
     "\n",
-    "# Nastavenie výšky obrázka\n",
-    "num_rows = len(df_a)\n",
-    "fig_height = (num_rows * 0.3) + 1.0 \n",
-    "\n",
-    "fig_tbl, ax_tbl = plt.subplots(figsize=(6, fig_height))\n",
+    "# Vytvorenie obrázka pre tabuľku\n",
+    "fig_tbl, ax_tbl = plt.subplots(figsize=(6, 2.5))\n",
     "ax_tbl.axis('tight')\n",
     "ax_tbl.axis('off')\n",
     "\n",
-    "# Vytvorenie tabuľky\n",
-    "table = ax_tbl.table(cellText=cell_text,\n",
-    "                     colLabels=[\"Resolution\", \"Modularita\", \"Počet komunít\"],\n",
+    "columns = [\"Poradie\", \"ID Komunity\", \"Počet členov\", \"Podiel na sieti\"]\n",
+    "\n",
+    "table = ax_tbl.table(cellText=top_5_data,\n",
+    "                     colLabels=columns,\n",
     "                     cellLoc='center',\n",
     "                     loc='center')\n",
     "\n",
@@ -239,16 +228,11 @@
     "table.set_fontsize(10)\n",
     "table.scale(1, 1.5)\n",
     "\n",
-    "plt.title(\"Detailné výsledky Experimentu A\", y=1.0, pad=20, fontsize=12, fontweight='bold')\n",
-    "plt.savefig(\"img/experiment_A_tabulka.png\", dpi=300, bbox_inches='tight')\n",
-    "plt.close()\n",
+    "plt.title(\"Top 5 najväčších komunít (Louvain)\", y=1.0, pad=20, fontsize=12, fontweight='bold')\n",
     "\n",
-    "# -------------------------------------------------------\n",
-    "# 4. Uloženie VÍŤAZNEJ vizualizácie - POUŽITIE TVOJEJ FUNKCIE\n",
-    "# -------------------------------------------------------\n",
-    "fn.draw_communities(G, best_partition, pos, \n",
-    "                   f\"Najlepší model (Louvain res={best_resolution})\", \n",
-    "                   \"img/best_louvain_model.png\")"
+    "# Uloženie s názvom Experiment B\n",
+    "plt.savefig(\"img/experiment_B_top5.png\", dpi=300, bbox_inches='tight')\n",
+    "plt.close()"
    ]
   }
  ],
